--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,9 @@ spring.h2.console.enabled=true
 
 spring.h2.console.path=/h2-console
 
-spring.datasource.url=jdbc:h2:mem:loveiaa
+spring.datasource.url=jdbc:h2:mem:loveiaa;NON_KEYWORDS=hour
 
 spring.data.rest.base-path=/rest
 
 spring.jackson.serialization.INDENT_OUTPUT=true
+
